Align view step buttons to top of container. Fixes #154

--- a/src/scss/_probes.scss
+++ b/src/scss/_probes.scss
@@ -157,7 +157,7 @@
   font-weight: bold;
   margin: 5px 0;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
